--- a/css/styles.css
+++ b/css/styles.css
@@ -26,51 +26,51 @@ body {
   background: #333;
 }
 
+/* Logo */
+
+.logo {
+  margin-right: auto;
+  padding: 40px;
+  width: 220px;
+  height: 40px;
+}
+
+.logo:hover {
+  opacity: 0.5;
+  transition: all 0.3s ease-in-out;
+}
+
+
 /* Navigation */
 
 header {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  padding: 5px;
   background-color: rgb(245, 245, 245);
   color: #333;
   height: 100px;
   position: fixed;
   top: 0;
+  left: 0;
+  right: 0;
   width: 100%;
   z-index: 1;
   box-shadow: 4px 2px 4px 2px rgb(51, 51, 51);
   transition: opacity 0.5s;
+  margin-bottom: 10px;
 }
 
 nav {
   display: flex;
   justify-content: flex-end;
-  margin-right: 20px;
-}
-
-.nav-menu {
-  display: block;
-  position: absolute;
-  top: 100%;
-  right: 0;
-  width: 100%; /* add width property */
-  background: rgb(245, 245, 245);
-  padding: 20px;
-  justify-content: flex-end;
-}
-
-
-.nav-menu.active {
-  display: flex;
 }
 
 nav ul {
   list-style: none;
   display: flex;
-  margin: 40px;
-  padding: 0;
+  margin: 0;
+  padding: 40px;
+  justify-content: flex-end;
 }
 
 nav a {
@@ -79,11 +79,27 @@ nav a {
   margin: 0 20px;
 }
 
+.nav-menu {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.nav-menu.active {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
 .hamburger-menu {
   display: none;
   background-color: rgb(245, 245, 245);
   border: none;
   cursor: pointer;
+  margin-left: auto;
+
 }
 
 .hamburger-menu .bar {
@@ -91,6 +107,7 @@ nav a {
   width: 25px;
   background-color: rgb(131, 131, 131);
   margin: 5px 0;
+
 }
 
 section {
@@ -118,7 +135,6 @@ a[href^="#"]:hover {
 }
 
 /* Animation  */
-
 .title {
   opacity: 0;
   transform: translateY(20px);
@@ -149,19 +165,6 @@ a[href^="#"]:hover {
 
 a[href^="#"]:focus {
   animation: smoothScroll 0.5s ease-out forwards;
-}
-
-/* Logo */
-
-.logo {
-  margin-left: 20px;
-  width: 220px;
-  height: 40px;
-}
-
-.logo:hover {
-  opacity: 0.5;
-  transition: all 0.3s ease-in-out;
 }
 
 /* Page Content  */
@@ -226,9 +229,7 @@ a[href^="#"]:focus {
   flex: 1;
 }
 
-
 /* Footer */
-
 footer {
   background-color: rgb(245, 245, 245);
   color: rgb(161, 161, 161);
@@ -241,79 +242,76 @@ footer {
 }
 
 /* Media Screens for Responsiveness */
-@media only screen and (max-width: 767px) {
+@media only screen and (min-width: 1024px) {
+
   header {
-    height: 80px;
-    padding: 5px;
+    display: flex;
+    justify-content: space-between;
+
+  }
+
+  .logo {
+    order: 1;
   }
 
   nav {
-    margin-right: 0;
-  }
-
-  .hamburger-menu {
-    display: block;
-    float: right;
-
+    display: flex;
+    order: 2;
   }
 
   nav ul {
-    display: none;
-    position: absolute;
-    top: 80px;
-    background-color: #f1f1f1;
-    width: 100%;
-    padding: 20px;
-    flex-direction: column;
+    display: flex;
+  }
+  
+
+}
+
+@media only screen and (max-width: 969px) {
+  header {
+    display: flex;
+    position: fixed;
+  }
+
+  nav {
+    display: flex;
+    z-index: 1;
+    margin-left: auto;
+    
+  }
+
+  nav ul {
+    display: block;
     align-items: center;
-  }
-
-  #home {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: rgb(245, 245, 245);
     width: 100%;
-    float: none;
-    margin: 0 auto;
+    
   }
 
-  .content {
+  .nav-menu {
+    display: none;
+    align-items: center;
+
+  }
+
+  .nav-menu.active {
+    display: flex;
+    align-items: center;
     margin: 0;
     padding: 0;
   }
 
-  section, footer {
+  .hamburger-menu {
+    display: block;
+    padding: 10px;
+  }
+  
+
+  section,
+  footer {
     width: 100%;
     margin: 0 auto;
-  }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 1024px) {
-  header {
-    height: 80px;
-    padding: 50px;
-    margin: 0;
-  }
-
-  nav {
-    margin-right: 20px;
-  }
-
-  nav ul {
-    display: flex;
-  }
-
-  nav.active {
-    display: flex;
-    flex-direction: column;
-  }
-}
-
-@media only screen and (orientation: landscape) {
-  section {
-    height: 400px;
-  }
-}
-
-@media only screen and (orientation: portrait) {
-  section {
-    height: 700px;
   }
 }
